app/assets/stylesheets/main.css
/* ... */
#explore .explore-item .explore-link .explore-hover {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    background: rgba(254,209,54,.9);
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
}

#explore .explore-item .explore-link .explore-hover:hover {
    opacity: 1;
}

#explore .explore-item .explore-link .explore-hover .explore-hover-content {
    position: absolute;
    top: 50%;
    width: 100%;
    height: 20px;
    margin-top: -12px;
    text-align: center;
    font-size: 20px;
    color: #fff;
}

#explore .explore-item .explore-link .explore-hover .explore-hover-content i {
    margin-top: -12px;
}

#explore .explore-item .explore-link .explore-hover .explore-hover-content h3,
#explore .explore-item .explore-link .explore-hover .explore-hover-content h4 {
    margin: 0;
}

.explore-caption, .result-caption {
    margin: 0 auto;
    padding: 25px;
    max-width: 650px;
    background-color: #fff;
    border-top: 1px solid #f7f7f7;
}

#explore .explore-item .explore-caption h4, .result-caption h4 {
    margin: 0;
    text-transform: none;
}


.result-item{
    padding: 5px;
}

.explore-item .explore-caption p, .result-caption p, {
    margin: 0;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 14px;
    font-style: italic;
}
/*
#explore * {
    z-index: 2;
}
*/
@media(min-width:767px) {
    #explore .explore-item, #recently-added .explore-item {
        margin: 0 0 30px;
    }
}

aside.sponsors img {
    margin: 50px auto;
}

footer {
    padding: 25px 0;
    font-size: 12px;
    text-align: center;
}

footer span.copyright {
    text-transform: uppercase;
    text-transform: none;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    line-height: 25px;
}

footer ul.quicklinks {
    margin-bottom: 0;
    text-transform: uppercase;
    text-transform: none;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    line-height: 25px;
}

ul.social-buttons {
    margin-bottom: 0;
}

ul.social-buttons li a {
    display: block;
    width: 40px;
    height: 40px;
    border-radius: 100%;
    font-size: 20px;
    line-height: 40px;
    outline: 0;
    color: #fff;
    background-color: #222;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
}

ul.social-buttons li a:hover,
ul.social-buttons li a:focus,
ul.social-buttons li a:active {
    background-color: #fed136;
}

.btn:focus,
.btn:active,
.btn.active,
.btn:active:focus {
    outline: 0;
}

::-moz-selection {
    text-shadow: none;
    background: #fed136;
}

::selection {
    text-shadow: none;
    background: #fed136;
}

img::selection {
    background: 0 0;
}

img::-moz-selection {
    background: 0 0;
}

body {
    webkit-tap-highlight-color: #fed136;
}

.row {
    margin-left: 0px;
    margin-right: 0px;
}

@media (min-width: 768px) {

    #fisheries #map {
     display: block;
    }
    .map-container {
        display: block;
        width: 40%;
    }

    .map-container:before {
        content: '';
        position: absolute;
        height: 100%;
        right: 0;
        -webkit-box-shadow: inset -1px 0 1px rgba(0,0,0,0.3);
        box-shadow: inset -1px 0 1px rgba(0,0,0,0.3);
        width: 2px;
        z-index: 2;
    }

    .map-container {
        position: fixed;
        right: 0;
        left: auto;
        bottom: 0;
        width: 100%;
        top: 50px;
    }

    #map {
        position: fixed;
        right: 0;
        left: auto;
        width: 40%;
        height: 100%;
        margin-top: 0px;
        margin-bottom: 10px;
        float: right;
    }
}

#water-form label, #display-latitude, #display-longitude{
    color: #fff;
}

#fishery-form label {
    display: none;
}


.controls {
    margin-top: 10px;
    border: 1px solid transparent;
    border-radius: 2px 0 0 2px;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    height: 32px;
    outline: none;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
}

#map-search-box {
    background-color: #fff;
    font-size: 15px;
    font-weight: 300;
    margin-left: 12px;
    padding: 0 11px 0 13px;
    text-overflow: ellipsis;
    width: 400px;
  }

#map-serach-box:focus {
    border-color: #4d90fe;
}

#how-it-works p.text-muted{
    line-height: 1.5;
}

#how-it-works h3.text-muted {
    line-height: 1.5;
}

body#search {
    background-color: #f7f7f7; /*bg-light-gray*/
}

body#trips{
   background-color: #fff;
}


body#search footer, body#trips footer{
    display: none;
}

.alert-location {
    position: absolute;
    width: 100%;
}

.title-header-outer {
    position: relative;
}

.title-header {
    position: absolute;
    width: 100%;
    z-index: 1;
    background-color: rgba(0, 0, 0, 0.2);
}

.water-count {
    position: absolute !important;
    right: 20px;
    top: 10px;
}

.water-name {
    width: 85%;
    margin-left: 10px;
    color: #fff;
}

#location-map, #fisheries #map{
  margin: 0;
  padding: 0;
  width: 100%;
  height:450px !important;
  margin-top: 0px;
  margin-bottom: 10px;
}


ul.species {
    padding-bottom: 10px;
}

.water-type, .fish, .location {
    padding-bottom: 10px;
}


.water-type img, .fish img, .location img {
    padding-right: 5px;
}

.water-type img, .fish img, .location img {
    padding-right: 5px;
    width:55px;
}

.water-type h6, .fish h6, .location h6 {
    font-weight: normal;
    line-height: 25px;
}


#search .missing-image, #results-container .missing-image{
    padding: 12px 0;
    height: 227px;
}

#recently-added .missing-image {
    height: 188px;
    padding-bottom: 10px;
    padding-top: 7px;
}

.attribution {
    font-size: 9px;
    padding: 5px;
}

@media(min-width:768px) {
   .attribution {
        font-size: 12px;
        padding: 10px;
    }

}

#locations h2.area{
    text-align: center;
    color: #fff;
    font-weight: normal;
}
/* ... */

